--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
 
   "scripts": {
-    "sass": "sass --watch ./sass/main.scss:./publics/css/style.css --style compressed"
+    "sass": "sass --watch ./sass/main.scss:./public/css/style.css --style compressed"
   },
   "repository": {
     "type": "git",
